fix : mobile layout shift

--- a/full-track-projects/javascript-object/react-version/src/App.css
+++ b/full-track-projects/javascript-object/react-version/src/App.css
@@ -229,6 +229,9 @@ form input {
   }
 }
 @media screen and (max-width:563px) {
+  body {
+    max-width: 99vw;
+  }
   .header-section {
     flex-direction: column;
     gap: 0;
